FINALLY fixed mobile view, it now works and tilegame can be played on mobile!

--- a/tilegame/tile_styles/autum.css
+++ b/tilegame/tile_styles/autum.css
@@ -1,10 +1,10 @@
 :root {
-    --one : #000000;
-    --two : #404040;
-    --three : #a2a2a2;
-    --four : #f5f5f5;
-    --five : #691323;
-    --six : #f83b4e;
+    --one : #751A33;
+    --two : #B34233;
+    --three : #D28F33;
+    --four : #D4B95E;
+    --five : #4EA2A2;
+    --six : #1A8693;
 }
 
 
