--- a/tilegame/tile_styles/party.css
+++ b/tilegame/tile_styles/party.css
@@ -1,10 +1,10 @@
 :root {
-    --one : #0006a5;
-    --two : #210083;
-    --three : #170057;
-    --four : #1c004a;
-    --five : #1b0031;
-    --six : #000000;
+    --one : #01befe;
+    --two : #ffe32c;
+    --three : #ff7d00;
+    --four : #ff006d;
+    --five : #88ff27;
+    --six : #8f00ff;
 }
 
 
